--- a/biblio_pseudo_alex.bib
+++ b/biblio_pseudo_alex.bib
@@ -742,3 +742,19 @@ author = "Xavier Assfeld and Jean-Louis Rivail"
 	keywords = {1st principles, ab-initio, atom centered potentials, capping   potentials, der-waals interactions, electronic-structure, high-performance computing, liquid water, molecular-properties, noncovalent interactions, plane-wave and   pseudopotentials, soft acids, space gaussian pseudopotentials, vibrational spectroscopy},
 	pages = {2147--2153}
 }
+Tian Lu, Feiwu Chen, Multiwfn: A Multifunctional Wavefunction Analyzer, J.
+Comp. Chem. 33, 580-592 (2012)
+
+@article{multiwfn,
+author = {Lu, Tian and Chen, Feiwu},
+title = {Multiwfn: A multifunctional wavefunction analyzer},
+journal = {Journal of Computational Chemistry},
+volume = {33},
+number = {5},
+pages = {580-592},
+keywords = {wavefunction analysis, orbital composition, population analysis, real space function, electron localization function},
+doi = {10.1002/jcc.22885},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/jcc.22885},
+eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/jcc.22885},
+}
+
