Added new spectra and st graphs

--- a/main.tex
+++ b/main.tex
@@ -635,11 +635,11 @@ C\(_{54}\)H\(_{18}\) is shown in the bottom.}
 \begin{figure}
 %\vspace*{0.1in}   %%% FIGURE 6
 \begin{center}
-\includegraphics[width=12cm,angle=270]{cnhn_uv}
+\includegraphics[width=16cm]{grand_rpa}
 \end{center}
 \vspace{0.25in}
 \hspace*{3in}
-\caption{Comparison of the UV spectra obtained with pseudo-potentials (ps) and all-electron (ref) calculations (def2-TZVP/TD-PBE0). The pseudo-potential systems have been red-shifted by a factor of 1.15.}
+\caption{Comparison of the absorption spectra for the first 20 excitations obtained with pseudo-potentials (ps) and all-electron (ref) calculations (def2-SV(P)/TD-PBE0).}
 \label{fig:cnhn_uv}
 \end{figure}
 
@@ -650,12 +650,10 @@ C\(_{54}\)H\(_{18}\) is shown in the bottom.}
 \end{center}
 \vspace{0.25in}
 \hspace*{3in}
-\caption{\ref{fig:aim_c6h6}Comparison of the bond critical points and bond critical paths obtained at the PBE0/def2-SV(P)
+\caption{Comparison of the bond critical points and bond critical paths obtained at the PBE0/def2-SV(P)
 level for the
-reference $\pi$ system of benzene (left) and the $\pi$ system obtained with the final
-pseudo-potentials (right). Colors indicate the nature of the critical points according to the sign of the Hessian
-of the density at their position: in cyan the atom critical points (3, -3) in blue the bond
-critical points (3, 1) and in red the cycle critical points (3, -1). The critical paths are drawn in yellow.}
+reference $\pi$ system of benzene (left) and the $\pi$ system obtained with the final pseudo-potentials (right). Colours indicate the nature of the critical points according to the sign of the Hessian
+of the density at their position. Shown are the atom critical points (3, -3) (cyan), the bond critical points (3, 1) (blue) and the cycle critical points (3, -1) (red). The critical paths are drawn in yellow.}
 \label{fig:cnhn_uv}
 \end{figure}
 
