modification of the uv spectra

--- a/main.tex
+++ b/main.tex
@@ -360,7 +360,8 @@ This confirms that the results obtained are not artefactual but that the pseudo 
 lead to a physically relevant electronic density.
 Yet, one can note that the position of the critical points are not exactly the same in both
 calculations and that the pseudo potential lead to a more diffuse $\pi$ bonding pattern.
-However, as both images are obtained with the same scale, 
+However, as both images are obtained with the same scale, one can see that the topology
+of the electronic density is in both cases very similar.
 
 \subsection*{\sffamily \large Timings}
 The model that we develop in this work allows significant computational gains.
@@ -639,7 +640,9 @@ C\(_{54}\)H\(_{18}\) is shown in the bottom.}
 \end{center}
 \vspace{0.25in}
 \hspace*{3in}
-\caption{Comparison of the absorption spectra for the first 20 excitations obtained with pseudo-potentials (ps) and all-electron (ref) calculations (def2-SV(P)/TD-PBE0).}
+\caption{Comparison of the absorption spectra for the first 20 excitations obtained with
+pseudo-potentials (ps) and all-electron (ref) calculations (def2-SV(P)/TD-PBE0). Peaks marked
+with * cannot be reproduced by the pseudo-potentials as they imply $\sigma$ orbitals.}
 \label{fig:cnhn_uv}
 \end{figure}
 
