--- a/main.tex
+++ b/main.tex
@@ -307,11 +307,32 @@ The previous calculations show that the pseudo-potentials that we have extracted
 are able to reproduce the low-lying first excited state as well as the ionisation potential
 of a large range of PAH.
 
-Encouraged by this, we decided to explore the virtual space further by computing a large number of $\pi$ excited states, and to compare the results to all-electron calculations using the PBE0 functional. As can be seen from Figure~\ref{fig:cnhn_uv}, which compares the absorption spectra of pseudo-potential and all-electron calculations for a selection of PAH, the shape of the spectra is well-reproduced. A red-shift of factor 1.15 is applied to the pseudo-potential systems to align them with their all-electron counterparts. We can see from the fit of the pairs of spectra that the scaling generates a near-perfect absorption curve across all systems.
+Encouraged by this, we decided to explore the virtual space further by computing the 20 first singlet
+and 20 first triplet 
+$\pi$ excited states, and to compare the results to all-electron calculations using the PBE0 functional.
+Singlet and triplet spectra are shown in Figure~\ref{fig:cnhn_uv}, which compares the absorption
+spectra of pseudo-potential and all-electron calculations for a selection of PAH.
+As the pseudo-potential contains only $\pi$ orbitals, the excications in the reference
+calculation which involve $\sigma$ orbitals cannot be reproduced.
+It is signaled by a * mark in the graphs.
+The overall agreement is very satisfactory.
+Excitation energies computed with the pseudo-potential are systematically lower: by 10\%
+for the singlet and by a very small amount for the triplet.
+This is a very pleasing surprise owing to the fact that the pseudo-potential used
+to obtain these results was extracted on the first excited state of ethylene.
+Furthermore, the analysis of the transition densities show that the physics of the excitations
+is reproduced as well (see Figure~\ref{fig:transitiondensities} and Table~\ref{tab:coef}).
+The most astounishing to us is the beautiful agreement of the excitation intensities in
+both singlet and triplet cases between peaks of the same molecule and also between
+molecules.
+This certainly shows again that the pseudo carbon we have extracted captures a lot of the
+physics of the reference system as the intensities are related to the transition dipole moment.
 
 These results show that the pseudo-potentials that we have extracted are able to reproduce the
 $\pi$ systems in a variety of situations which are not part of their extraction set.
-The molecular orbital virtual space is also well described (cf. Table~\ref{tab:coef}),
+We have also shown that the pseudo-potentials presented herein can be analyzed throught state of the
+art methods (AIM in the present work).
+The molecular orbital virtual space is also well described up to a high number of excited states,
 which demonstrates that the good agreement with reference calculations is
 physically grounded.
 
@@ -657,7 +678,7 @@ with * cannot be reproduced by the pseudo-potentials as they imply $\sigma$ orbi
 level for the
 reference $\pi$ system of benzene (left) and the $\pi$ system obtained with the final pseudo-potentials (right). Colours indicate the nature of the critical points according to the sign of the Hessian
 of the density at their position. Shown are the atom critical points (3, -3) (cyan), the bond critical points (3, 1) (blue) and the cycle critical points (3, -1) (red). The critical paths are drawn in yellow.}
-\label{fig:cnhn_uv}
+\label{fig:aim_c6h6}
 \end{figure}
 
 \clearpage
