Added transition densities images

--- a/main.tex
+++ b/main.tex
@@ -654,7 +654,20 @@ C\(_{54}\)H\(_{18}\) is shown in the bottom.}
 level for the
 reference $\pi$ system of benzene (left) and the $\pi$ system obtained with the final pseudo-potentials (right). Colours indicate the nature of the critical points according to the sign of the Hessian
 of the density at their position. Shown are the atom critical points (3, -3) (cyan), the bond critical points (3, 1) (blue) and the cycle critical points (3, -1) (red). The critical paths are drawn in yellow.}
-\label{fig:cnhn_uv}
+\label{fig:benzene_aim}
+\end{figure}
+
+\begin{figure}
+\begin{center}
+\includegraphics[width=7cm, height=7cm]{pyrene_520nm.png}
+\includegraphics[width=7cm, height=7cm]{ps_pyrene_520nm.png}
+
+\vspace{5mm}
+\includegraphics[width=7cm, height=7cm]{pyrene_2nd_peak.png}
+\includegraphics[width=7cm, height=7cm]{ps_pyrene_2nd_peak.png}
+\end{center}
+\caption{Transition densities of the first two (lowest-energy) pyrene absorption peaks, for singlet-singlet excitation spectra, as seen in Figure \ref{fig:cnhn_uv}, with all-electron spectra (left) and pseudo-molecule spectra (right). In each case, the electron is excited from the molecular orbital displayed in blue, to the orbital displayed in red.}
+\label{fig:transitiondensities}
 \end{figure}
 
 \clearpage
