--- a/main.tex
+++ b/main.tex
@@ -690,7 +690,10 @@ of the density at their position. Shown are the atom critical points (3, -3) (cy
 \includegraphics[width=7cm, height=7cm]{pyrene_2nd_peak.png}
 \includegraphics[width=7cm, height=7cm]{ps_pyrene_2nd_peak.png}
 \end{center}
-\caption{Transition densities of the first two (lowest-energy) pyrene absorption peaks, for singlet-singlet excitation spectra, as seen in Figure \ref{fig:cnhn_uv}, with all-electron spectra (left) and pseudo-molecule spectra (right). In each case, the electron is excited from the molecular orbital displayed in blue, to the orbital displayed in red.}
+\caption{Transition densities of the first two (lowest-energy) pyrene absorption peaks,
+for singlet excitation spectra, as seen in Figure \ref{fig:cnhn_uv},
+with all-electron spectra (left) and pseudo-molecule spectra (right).
+In the excitation, the electron density is decreased in the blue region and increased in the red region.}
 \label{fig:transitiondensities}
 \end{figure}
 
