Added all UHF results to error graphs

--- a/main.tex
+++ b/main.tex
@@ -727,9 +727,12 @@ final pseudo-C$_{2}$H$_{4}$ & -3.910 & 0.624 & 1.500 & 0.500 & -10.062 & -3.533 
 \hline
 Calculation Type & HF & PBE0 & PBE & TPSS & TPSSh \\
 \hline
-Mean \(\pi - \pi*\) Triplet-Singlet error (\%) & 4.1 & 3.6 & 7.5 & 13.3 & 11.4 \\
-Mean Ionisation error (\%) & 5.3 & 6.0 & 8.1 & 10.1 & 9.0 \\
-Mean Singlet HOMO error (\%) & 1.3 & 4.0 & 8.5 & 12.0 & 9.7 \\
+Mean \(\pi - \pi*\) Triplet-Singlet (RHF) error (\%) & 4.1 & 3.6 & 7.5 & 13.3 & 11.4 \\
+Mean \(\pi - \pi*\) Triplet-Singlet (UHF) error (\%) & 6.9 & 3.6 & 7.5 & 13.3 & 11.4 \\
+Mean Ionisation (RHF) error (\%) & 5.6 & 7.0 & 8.8 & 11.3 & 9.9 \\
+Mean Ionisation (UHF) error (\%) & 7.7 & 6.9 & 8.8 & 11.3 & 9.9 \\
+Mean Singlet HOMO (RHF) error (\%) & 1.3 & 4.2 & 9.3 & 13.7 & 10.7 \\
+Mean Singlet HOMO (UHF) error (\%) & 2.2 & 4.2 & 9.3 & 14.5 & 10.0 \\
 Mean TD-DFT Excitation error (\%) & - & 2.6 & - & - & - \\ 
 \hline
 \end{tabular}
@@ -744,9 +747,12 @@ Mean TD-DFT Excitation error (\%) & - & 2.6 & - & - & - \\
 \hline
 Calculation Type & HF & PBE0 & PBE & TPSS & TPSSH \\
 \hline
-Mean \(\pi - \pi*\) Triplet-Singlet error (\%) & 3.3 & 1.9 & 1.7 & 6.8 & 6.7 \\
-Mean Ionisation error (\%) & 7.4 & 10.0 & 12.5 & 14.4 & 13.0 \\
-Mean Singlet HOMO error (\%) & 3.4  & 9.3  & 13.4 & 17.1 & 14.7 \\
+Mean \(\pi - \pi*\) Triplet-Singlet (RHF) error (\%) & 3.3 & 1.9 & 1.7 & 6.8 & 6.7 \\
+Mean \(\pi - \pi*\) Triplet-Singlet (UHF) error (\%) & 9.1 & 2.1 & 5.7 & 6.7 & 7.1 \\
+Mean Ionisation (RHF) error (\%) & 7.9 & 12.0 & 15.4 & 18.0 & 16.1 \\
+Mean Ionisation (UHF) error (\%) & 13.4 & 12.0 & 18.8 & 18.0 & 16.1 \\
+Mean Singlet HOMO (RHF) error (\%) & 4.7 & 11.5 & 17.1 & 22.3 & 18.7 \\
+Mean Singlet HOMO (UHF) error (\%) & 2.3 & 11.5 & 18.1 & 21.1 & 21.2 \\
 Mean TD-DFT Excitation error (\%) & - & 0.099 & - & - & - \\ 
 \hline
 \end{tabular}
@@ -761,9 +767,12 @@ Mean TD-DFT Excitation error (\%) & - & 0.099 & - & - & - \\
 \hline
 Calculation Type & HF & PBE0 & PBE & TPSS & TPSSH \\
 \hline
-Mean \(\pi - \pi*\) Triplet-Singlet error (\%) & 204.6 & 5.4 & 27.6 & 36.8 & 18.8 \\
-Mean Ionisation error (\%) & 59.3 & 9.3 & 10.5 & 15.7 & 15.6 \\
-Mean Singlet HOMO error (\%) & 12.1 & 6.8 & 10.5 & 13.3 & 14.4 \\
+Mean \(\pi - \pi*\) Triplet-Singlet (RHF) error (\%) & 125.7 & 58.3 & 47.2 & 182.0 & 155.6 \\
+Mean \(\pi - \pi*\) Triplet-Singlet (UHF) error (\%) & 302.6 & 5.1 & 21.1 & 26.3 & 15.5 \\
+Mean Ionisation (RHF) error (\%) & 35.8 & 6.6 & 10.3 & 11.3 & 11.2 \\
+Mean Ionisation (UHF) error (\%) & 184.0 & 10.3 & 11.8 & 18.9 & 18.7 \\
+Mean Singlet HOMO (RHF) error (\%) & 1.8 & 7.8 & 12.8 & 20.1 & 15.7 \\
+Mean Singlet HOMO (UHF) error (\%) & 14.2 & 7.3 & 11.8 & 15.4 & 16.9 \\
 Mean TD-DFT Excitation error (\%) & - & 0.005 & - & - & - \\ 
 \hline
 \end{tabular}
