Added all TDDFT results to tables

--- a/main.tex
+++ b/main.tex
@@ -690,10 +690,7 @@ of the density at their position. Shown are the atom critical points (3, -3) (cy
 \includegraphics[width=7cm, height=7cm]{pyrene_2nd_peak.png}
 \includegraphics[width=7cm, height=7cm]{ps_pyrene_2nd_peak.png}
 \end{center}
-\caption{Transition densities of the first two (lowest-energy) pyrene absorption peaks,
-for singlet excitation spectra, as seen in Figure \ref{fig:cnhn_uv},
-with all-electron spectra (left) and pseudo-molecule spectra (right).
-In the excitation, the electron density is decreased in the blue region and increased in the red region.}
+\caption{Transition densities of the first two (lowest-energy) pyrene absorption peaks, for singlet-singlet excitation spectra, as seen in Figure \ref{fig:cnhn_uv}, with all-electron spectra (left) and pseudo-molecule spectra (right). In each case, the electron is excited from the molecular orbital displayed in blue, to the orbital displayed in red.}
 \label{fig:transitiondensities}
 \end{figure}
 
@@ -736,7 +733,7 @@ Mean Ionisation (RHF) error (\%) & 5.6 & 7.0 & 8.8 & 11.3 & 9.9 \\
 Mean Ionisation (UHF) error (\%) & 7.7 & 6.9 & 8.8 & 11.3 & 9.9 \\
 Mean Singlet HOMO (RHF) error (\%) & 1.3 & 4.2 & 9.3 & 13.7 & 10.7 \\
 Mean Singlet HOMO (UHF) error (\%) & 2.2 & 4.2 & 9.3 & 14.5 & 10.0 \\
-Mean TD-DFT Excitation error (\%) & - & 2.6 & - & - & - \\ 
+Mean TD-DFT Excitation error (\%) & 10.2 & 2.6 & 2.7 & 5.9 & 6.4 \\ 
 \hline
 \end{tabular}
 \label{table:alkene_errors}
@@ -756,7 +753,7 @@ Mean Ionisation (RHF) error (\%) & 7.9 & 12.0 & 15.4 & 18.0 & 16.1 \\
 Mean Ionisation (UHF) error (\%) & 13.4 & 12.0 & 18.8 & 18.0 & 16.1 \\
 Mean Singlet HOMO (RHF) error (\%) & 4.7 & 11.5 & 17.1 & 22.3 & 18.7 \\
 Mean Singlet HOMO (UHF) error (\%) & 2.3 & 11.5 & 18.1 & 21.1 & 21.2 \\
-Mean TD-DFT Excitation error (\%) & - & 0.099 & - & - & - \\ 
+Mean TD-DFT Excitation error (\%) & 11.8 & 4.4 & 2.6 & 5.9 & 6.5 \\ 
 \hline
 \end{tabular}
 \label{table:ring_system_errors}
@@ -776,7 +773,7 @@ Mean Ionisation (RHF) error (\%) & 35.8 & 6.6 & 10.3 & 11.3 & 11.2 \\
 Mean Ionisation (UHF) error (\%) & 184.0 & 10.3 & 11.8 & 18.9 & 18.7 \\
 Mean Singlet HOMO (RHF) error (\%) & 1.8 & 7.8 & 12.8 & 20.1 & 15.7 \\
 Mean Singlet HOMO (UHF) error (\%) & 14.2 & 7.3 & 11.8 & 15.4 & 16.9 \\
-Mean TD-DFT Excitation error (\%) & - & 0.005 & - & - & - \\ 
+Mean TD-DFT Excitation error (\%) & 23.1 & 1.0 & 6.8 & 6.1 & 2.9 \\ 
 \hline
 \end{tabular}
 \label{table:long_alkene_errors}
